[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/fada_azul_skin.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Inimigos/inimigo_teleguiado.gd" type="Script" id=2]
[ext_resource path="res://Inimigos/Funcao_dano.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 9.5692

[node name="inimigo_teleguiado" type="Node2D"]
light_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "movimentacao_fada_azul"
frame = 3
playing = true

[node name="Move_Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.8

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.244171, 3.17425 )
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
